OS-124-fix fix bug workshift picker

--- a/src/front-end/osekiller/src/index.css
+++ b/src/front-end/osekiller/src/index.css
@@ -32,3 +32,7 @@ form .section {
     color: white;
     border-radius: 10px;
 }
+
+.react-time-picker input {
+    color: white;
+}
